[project]
name = "bus"
version = "0.1.0"
description = "Bus Race - Terminal Simulation"
authors = [
    { name = "Juan Perdomo [Jakepy]", email = "perdomojuan187@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/bus"]
